# LBA2SD

./: Cargo.toml  README.MD
.github/workflows/: rust.yml
src/: compression.rs  decompression.rs  fileheader.rs  main.rs
